// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Routes GET /participant/:participantId should fail when the participant does not exist 1`] = `
{
  "error": "Unknown participantId",
}
`;

exports[`API Routes GET /participant/:participantId should fail when the participant is invalid 1`] = `
{
  "error": "participantId is not a valid UUID",
}
`;

exports[`API Routes GET /participant/:participantId should retrieve public information about a participant 1`] = `
{
  "publicInfo": {
    "participantHasDoneSomething": true,
  },
}
`;

exports[`API Routes GET /run/:runId should fail when the run does not exist 1`] = `
{
  "error": "Unknown runId",
}
`;

exports[`API Routes GET /run/:runId should fail when the runId is invalid 1`] = `
{
  "error": "runId is not a valid UUID",
}
`;

exports[`API Routes GET /run/:runId should retrieve public information about a run 1`] = `
{
  "publicInfo": {
    "dolor": "sit",
  },
}
`;

exports[`API Routes GET /study/:studyId/count/:countType should fail when the countType does not exist 1`] = `
{
  "error": "Failed to retrieve study count",
}
`;

exports[`API Routes GET /study/:studyId/count/:countType should fail when the study does not exist 1`] = `
{
  "error": "Unknown studyId",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should fail when the study does not exist 1`] = `
{
  "error": "Unknown studyId",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should require authentication 1`] = `
{
  "error": "Authentication via API Key required",
}
`;

exports[`API Routes GET /study/:studyId/data/:dataType should require the correct API KEY 1`] = `
{
  "error": "The provided API Key is invalid.",
}
`;

exports[`API Routes POST /response should fail to submit a response when the run does not exist 1`] = `
{
  "error": "Unknown runId",
}
`;

exports[`API Routes POST /response should fail to submit a response when the runId is invalid 1`] = `
{
  "error": "runId is not a valid UUID",
}
`;

exports[`API Routes POST /response should fail to submit non-JSON payload 1`] = `
{
  "error": "Payload has to be a JSON object, undefined or null.",
}
`;

exports[`API Routes POST /run/finish should fail when the run does not exist 1`] = `
{
  "error": "Unknown runId",
}
`;

exports[`API Routes POST /run/finish should fail when the runId is invalid 1`] = `
{
  "error": "runId is not a valid UUID",
}
`;

exports[`API Routes POST /run/finish should mark a run as finished 1`] = `{}`;

exports[`API Routes PUT /participant/:participantId should fail when the participant does not exist 1`] = `
{
  "error": "Unknown participantId",
}
`;

exports[`API Routes PUT /participant/:participantId should fail when the participant is invalid 1`] = `
{
  "error": "participantId is not a valid UUID",
}
`;

exports[`API Routes PUT /participant/:participantId should update an existing participant 1`] = `{}`;

exports[`API Routes PUT /run/:runId should fail when the run does not exist 1`] = `
{
  "error": "Unknown runId",
}
`;

exports[`API Routes PUT /run/:runId should fail when the runId is invalid 1`] = `
{
  "error": "runId is not a valid UUID",
}
`;

exports[`API Routes PUT /run/:runId should update a run 1`] = `{}`;
